--- a/terms.html
+++ b/terms.html
@@ -15,6 +15,15 @@
     <meta name="twitter:title" content="Terms of Use – Subtitle Generator">
     <meta name="twitter:description" content="Read the Terms of Use for Subtitle Generator, a free online subtitle video maker with green screen backgrounds.">
     <meta name="twitter:image" content="https://subtitlegenerator.github.io/logo.png">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4NBG3SLB4K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4NBG3SLB4K');
+</script>
     <script type="application/ld+json"> 
     { 
       "@context": "https://schema.org",
