--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ This is a subtitle example.</pre>
         <footer class="modern-footer">
             <span>
                 <a href="terms.html">Terms of Use</a> &nbsp;|&nbsp; <a href="privacy.html">Privacy Policy</a>
-                <span style="margin-left:18px;">Made with <i class="fas fa-heart"></i> for creators</span>
+                <span style="margin-left:18px;">Made by <a href="https://helderweb.nl/">Helder Web</a> with <i class="fas fa-heart"></i> for creators</span>
             </span>
         </footer>
     </div>
